fixed right-most drop-down to work on mobile

--- a/about1.css
+++ b/about1.css
@@ -163,7 +163,6 @@ li:hover {
   position: absolute;
   top: 60px;
   padding-left: 0;
-  left: 0;
   right: 0;
   border-radius: 0.5em;
   min-height: 76px;
